--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/myCss.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/myCss.css
@@ -415,7 +415,7 @@ body {
 
 /*Cart頁面垃圾桶圖樣樣式End*/
 
-.checkout-input {
+.checkout-inputs {
     background-color: #F8F0E7;
     border: solid #dee2e6;
     border-radius:5px;
