--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
@@ -78,28 +78,34 @@
                 </div>
             </div>
         </div>
-        @if (Model != null) 
-        { 
-        <div class="row mt-3">
-            <div class="col-6">
-                <div class="title-left">
-                    <h3>付款方式</h3>
-                    <div> @*@Model.getFinalPaymentMethod.paymentMethod*@ </div>
+        @if (Model != null && Model.getFinalPriceData !=null)
+        {
+            <div class="row mt-3">
+                <div class="col-6">
+                    <div class="title-left">
+                        <h3>付款方式</h3> 
+                    </div>
+                    <h4> @Model.getFinalPriceData.paymentMethod </h4>
                 </div>
-            </div>
-            <div class="col-6">
-                <div class="title-left">
-                    <h3>運送方式</h3>
+                <div class="col-6">
+                    <div class="title-left">
+                        <h3>運送方式</h3>
+                    </div>
+                    <div>
+                        <h4> @Model.getFinalPriceData.deliveryMethod </h4>
+                        <div>取件門市： @Model.getFinalPriceData.storeName </div>
+                        <div>取件姓名： @Model.getFinalPriceData.name </div>
+                        <div>取件人電話： @Model.getFinalPriceData.phone </div>
+                    </div>
                 </div>
-            </div>
             </div>
         }
         @if (Model != null && Model.getFinalPriceData != null)
         {
-        <div class="row ">
-            <div class="col-md-12 col-lg-12">
-              
-                <div class="order-box">                  
+            <div class="row ">
+                <div class="col-md-12 col-lg-12">
+
+                    <div class="order-box">
                         <div class="d-flex">
                             <h4>小計</h4>
                             <div class="ml-auto font-weight-bold" id="finalSubtotal"> NT @Model.getFinalPriceData.subtotal  </div>
@@ -123,12 +129,12 @@
                     </div>
                 </div>
             </div>
-                    }
-                    @if (HttpContextAccessor.HttpContext.Session.GetString(CDictionary.SK_LOINGED_USER) != null && Model != null)
-                    {
+        }
+        @if (HttpContextAccessor.HttpContext.Session.GetString(CDictionary.SK_LOINGED_USER) != null && Model != null)
+        {
             <div id="MemberId" hidden> @memberinfo.MemberId </div>
 
-                    }
+        }
         <!--導至綠界付款的隱藏頁面-->
         <form id="ecpayform" name="form" method="POST" action="https://payment-stage.ecpay.com.tw/Cashier/AioCheckOut/V5">
             <!--step2 : 收到後端的值印出來-->
@@ -139,8 +145,8 @@
                 </button>
             </div>
             <div>
-                            @if (Model != null)
-                            {
+                @if (Model != null)
+                {
                     <input type="text" name="MerchantTradeNo" value="@Model.keyValuePairs["MerchantTradeNo"]" />
                     <input type="text" name="MerchantTradeDate" value="@Model.keyValuePairs["MerchantTradeDate"]" />
                     <input type="text" name="TotalAmount" value="@Model.keyValuePairs["TotalAmount"]" />
@@ -161,27 +167,27 @@
                     <input type="text" name="ChoosePayment" value="@Model.keyValuePairs["ChoosePayment"]" />
                     <input type="text" name="EncryptType" value="@Model.keyValuePairs["EncryptType"]" />
                     <input type="text" name="CheckMacValue" value="@Model.keyValuePairs["CheckMacValue"]" />
-                                @* @foreach (var key in @Model.keyValuePairs.Keys.ToList())
+                    @* @foreach (var key in @Model.keyValuePairs.Keys.ToList())
                 {
                 @(key) <input type="text" name="@key" value="@Model.keyValuePairs[key]" />
 
                 <br />
                 }
                 @*<button type="submit" id="checkoutBtn">送出</button>*@
-                            }
+                }
             </div>
         </form>
     </div>
 </div>
 <!--中間主畫面End-->
-            @section Scripts{
+@section Scripts{
     <!-- ALL JS FILES -->
     <!--引用Bundle，這樣nav導覽與頁籤就可以使用-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
             crossorigin="anonymous"></script>
     <!--引用分離(Separate)-->
-                @*  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    @*  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script> *@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
@@ -211,8 +217,8 @@
     <script src="~/js/pay.js"></script>
     <script>
         // 監聽送出訂單按鈕的點擊事件
-        $('#gotopay').on('click', (e) => {
-            /* e.preventDefault(); */ /*因為送出就跳轉到綠界，這個可以停住確認自己的console.log的內容*/
+        $('#gotopay').on('click', (e) => {  
+            /* e.preventDefault();*/  /*因為送出就跳轉到綠界，這個可以停住確認自己的console.log的內容*/
             console.log("嚴重折壽耶^_^")
             let formData = $("#ecpayform").serializeArray();
             var json = {};
@@ -239,7 +245,6 @@
 
                         },
                         success: function (res) {
-                            // 處理成功回應
                         },
                         error: function (err) {
                             // 處理錯誤回應
