--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
@@ -72,7 +72,7 @@
                                     <div>
                                         <label for="txtEmail">電子信箱：</label>
                                         <input type="email" class="form-control" id="txtEmail" name="txtEmail"
-                                           placeholder="email" value="aaa@gmail.com" required>
+                                           placeholder="email" value="seoari@gmail.com" required>
                                         <div class="invalid-feedback"> 請輸入電子信箱</div>
                                     </div>
                                     <div>
