--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
@@ -107,22 +107,22 @@
 
                     <div class="order-box">
                         <div class="d-flex">
-                            <h4>小計</h4>
-                            <div class="ml-auto font-weight-bold" id="finalSubtotal"> NT @Model.getFinalPriceData.subtotal  </div>
+                            <h4 class="mr-auto">小計</h4>
+                            <span class="mr-2 font-weight-bold">NT</span><div class=" font-weight-bold" id="finalSubtotal">@Model.getFinalPriceData.subtotal</div>
                         </div>
                         <div class="d-flex">
-                            <h4>運費</h4>
-                            <div class="ml-auto font-weight-bold" id="finalShippingFee"> +NT @Model.getFinalPriceData.shippingFee  </div>
+                            <h4 class="mr-auto">運費</h4>
+                            <span class="mr-2 font-weight-bold">+NT</span><div class=" font-weight-bold" id="finalShippingFee">@Model.getFinalPriceData.shippingFee</div>
                         </div>
                         <hr class="my-1">
                         <div class="d-flex">
-                            <h4>總折扣</h4>
-                            <div class="ml-auto font-weight-bold" id="finalTotalDiscount"> -NT @Model.getFinalPriceData.finalBonus  </div>
+                            <h4 class="mr-auto">總折扣</h4>
+                            <span class="mr-2 font-weight-bold">-NT</span><div class=" font-weight-bold" id="finalTotalDiscount">@Model.getFinalPriceData.finalBonus</div>
                         </div>
                         <hr>
                         <div class="d-flex gr-total">
-                            <h5>總計</h5>
-                            <div class="ml-auto h4" style="color:red" id="allTotalPrice"> NT @Model.getFinalPriceData.finalAmount  </div>
+                            <h5 class="mr-auto">總計</h5>
+                            <span class="mr-2 font-weight-bold" style="color:red">NT</span><div class=" h4" style="color:red" id="allTotalPrice">@Model.getFinalPriceData.finalAmount</div>
                         </div>
                         <hr>
 
@@ -144,7 +144,7 @@
                     去結帳
                 </button>
             </div>
-            <div>
+            <div hidden>
                 @if (Model != null)
                 {
                     <input type="text" name="MerchantTradeNo" value="@Model.keyValuePairs["MerchantTradeNo"]" />
@@ -182,6 +182,7 @@
 <!--中間主畫面End-->
 @section Scripts{
     <!-- ALL JS FILES -->
+    
     <!--引用Bundle，這樣nav導覽與頁籤就可以使用-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
@@ -195,9 +196,10 @@
             crossorigin="anonymous"></script>
     <!---->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="~/js/jquery-3.2.1.min.js"></script>
+    @*<script src="~/js/jquery-3.2.1.min.js"></script>*@
     <script src="~/js/popper.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
+    
     <!-- ALL PLUGINS -->
     <script src="~/js/jquery.superslides.min.js"></script>
     <script src="~/js/bootstrap-select.js"></script>
@@ -209,15 +211,15 @@
     <script src="~/js/baguetteBox.min.js"></script>
     <script src="~/js/form-validator.min.js"></script>
     <script src="~/js/contact-form-script.js"></script>
-    <script src="~/js/custom.js"></script>
+    @*<script src="~/js/custom.js"></script>*@
     <!--nav導覽與頁籤使用-->
-    <script src="~/js/myScript.js"></script>
+    @*<script src="~/js/myScript.js"></script>*@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="~/js/pay.js"></script>
     <script>
+
         // 監聽送出訂單按鈕的點擊事件
-        $('#gotopay').on('click', (e) => {  
+        $('#gotopay').on('click', (e) => {
             /* e.preventDefault();*/  /*因為送出就跳轉到綠界，這個可以停住確認自己的console.log的內容*/
             console.log("嚴重折壽耶^_^")
             let formData = $("#ecpayform").serializeArray();
@@ -234,19 +236,23 @@
                 data: JSON.stringify(json),
                 success: function (res) {
                     console.log(res);
+                    console.log("存回我們自己的資料庫囉")
                     var memberId = $("#MemberId").text();
+                    var totalPrice = $("#allTotalPrice").text()
                     console.log("會員ID", memberId)
+                    console.log("會員價格", totalPrice)
                     $.ajax({
                         type: 'POST',
                         url: '/CheckOut/AddNewOrder',
                         data:
                         {
                             MemberId: memberId,
+                            ResultPrice: totalPrice,
 
                         },
-                        success: function (res) {
+                        success: function (response) {
                         },
-                        error: function (err) {
+                        error: function (response) {
                             // 處理錯誤回應
                         },
                     });
