DEMO前調整: 小遊戲速度加快，DEMO帶入資料調整

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
@@ -266,8 +266,8 @@
         //DEMO未信箱驗證會員
         //DEMO按鈕
         $('#unverifiedLogin').click(function () {
-            $('#txtEmail').val("cc@gmail.com");
-            $('#txtPassword').val("aa1234");
+            $('#txtEmail').val("ocarina51006@gmail.com");
+            $('#txtPassword').val("aaa1234");
         });
 
         //const divElement = document.getElementById('g_id_onload');
