--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/RegisterMember.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/RegisterMember.cshtml
@@ -373,8 +373,8 @@
         $('#registerdemoBTN').click(function () {
             $('#registerNameText').val("安安");
             $('#registerBirthText').val("01/01/1999");
-            $('#emailInput').val("ocarina51006@gmail.com")
-            $('#registerPhoneText').val("0988657812");
+            $('#emailInput').val("ocarina51006gmail.com")
+            $('#registerPhoneText').val("1988657812");
             $('#passwordInput').val("aaa1234");
             $('#passwordCheck').val("aaa123");
         });
