--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
@@ -136,7 +136,7 @@
                                 <input type="checkbox" class="custom-control-input" id="useLoyalityPoint">
                                 <label class="custom-control-label" for="useLoyalityPoint" id="loyalityPointBonus">使用 @Model.getCouponPrice.finalBonus 紅利折抵NT @Model.getCouponPrice.finalPrice</label>
                             </div>
-                            <div class="ml-4 mb-2 small">您有 @memberinfo.LoyaltyPoints 個紅利，單筆訂單最多可折抵10%商品金額</div>
+                            <div class="ml-4 mb-2 small">您有<a class="ml-1 mb-2 small" style="color:#DE9E4F"> @memberinfo.LoyaltyPoints</a> 個紅利，單筆訂單最多可折抵10%商品金額</div>
                         </form>
                     }
                 </div>
@@ -997,6 +997,7 @@
                                                         data-bs-target="#chooseEinvoice">
                                                     選擇載具條碼
                                                 </button>
+                                                <button class="ml-1 chooseStore_btn" id="invoiceDemo">Demo</button>
                                             </div>
                                         </div>
 
@@ -1325,6 +1326,12 @@
             deliveryInfo.name = name;
             deliveryInfo.phone = phone;
         })
+
+        //DEMO載具
+        $('#invoiceDemo').click(function(){
+            $('#eInvoiceNum').val("/9Qj376W");
+        })
+
         //$('#select-seveneleven').on('input', function () {
         //    var storeName = $(this).val();
         //    deliveryInfo.storeName = storeName;
