--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
@@ -40,10 +40,10 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h2>結帳完成</h2>
+                <h2>去結帳</h2>
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a asp-controller="Index" asp-action="Index">首頁</a></li>
-                    <li class="breadcrumb-item active">結帳完成</li>
+                    <li class="breadcrumb-item active">去結帳</li>
                 </ul>
             </div>
         </div>
@@ -53,6 +53,7 @@
 <!--中間主畫面Start-->
 <div class="cart-box-main">
     <div class="container" style="max-width: 800px; margin: 0 auto;">
+        <h3 class="d-flex justify-content-center" style="color:#DE9E4F">請貓奴們確認訂單明細後再前往結帳喔</h3>
         <div class="row">
             <div class="odr-box">
                 <div class="title-left">
