修改左側導覽列跑版

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/index.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/index.css
@@ -4,10 +4,6 @@ body {
     font-size: 18px !important;
 }
 
-.all-content {
-    max-height: 100vh;
-}
-
 .close-icon {
     float: right;
     cursor: pointer;
@@ -153,6 +149,7 @@ body {
     background-color: #b95756;
     z-index: 1000;
     font-size: 18px;
+    margin-bottom: 0; /*這裡要加才不會讓解析度變高時下面跑版*/
 }
 
 .SideBar_Suppiler {
