--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
@@ -396,7 +396,7 @@
         </div>
         <div class="position-absolute top-50 start-50 translate-middle">
             <div class="popup" id="my-popup">
-                <img src="https://i.imgur.com/Db9cwjE.png" alt="Popup Image" class="popup-image">
+                <img src="https://i.imgur.com/z3dc846.png" alt="Popup Image" class="popup-image">
             </div>
             <div class="animate animate02">
                 <div class="catAnimate "></div>
